tests/negative/gold/prefix_postfix_test.gold
tests/negative/prefix_postfix_test.toit:7:3: error: Can't have space between '++' and the operand
  ++ foo
  ^~~~~~
tests/negative/prefix_postfix_test.toit:8:3: error: Can't have space between '--' and the operand
  -- foo
  ^~~~~~
tests/negative/prefix_postfix_test.toit:8:3: warning: Prefix decrement is deprecated
  -- foo
  ^~~~~~
tests/negative/prefix_postfix_test.toit:9:7: error: Can't have space between '--' and the operand
  foo --
      ^
tests/negative/prefix_postfix_test.toit:9:7: warning: Prefix decrement is deprecated
  foo --
      ^
tests/negative/prefix_postfix_test.toit:9:9: error: Incomplete expression
  foo --
        ^
tests/negative/prefix_postfix_test.toit:10:7: error: Can't have space between '++' and the operand
  foo ++
      ^
tests/negative/prefix_postfix_test.toit:10:9: error: Incomplete expression
  foo ++
        ^
tests/negative/prefix_postfix_test.toit:11:3: warning: Prefix decrement is deprecated
  --foo
  ^~~~~
tests/negative/prefix_postfix_test.toit:9:9: error: Can't assign to expression
  foo --
        ^
tests/negative/prefix_postfix_test.toit:9:3: error: Can't invoke local variable 'foo'
  foo --
  ^~~
tests/negative/prefix_postfix_test.toit:10:9: error: Can't assign to expression
  foo ++
        ^
tests/negative/prefix_postfix_test.toit:10:3: error: Can't invoke local variable 'foo'
  foo ++
  ^~~
Compilation failed.
